arm64: dts: qcom: sa8295-adp: Move TLMM node to end
The pinctrl settings tend to take up quite a bit of space, so it's
preferred to push these to end end of the file. Do this for the SA8295p
ADP as well to prepare for further pinctrl-related additions.

Signed-off-by: Bjorn Andersson <bjorn.andersson@linaro.org>

--- a/arch/arm64/boot/dts/qcom/sa8295p-adp.dts
+++ b/arch/arm64/boot/dts/qcom/sa8295p-adp.dts
@@ -265,3 +265,16 @@
 	vdda-phy-supply = <&vreg_l4c>;
 	vdda-pll-supply = <&vreg_l1c>;
 };
+
+/* PINCTRL */
+&tlmm {
+	/* FIXME: add all pins? */
+	pcie3a_default_state: pcie3a-default {
+		wake {
+			pins = "gpio56";
+			function = "gpio";
+			drive-strength = <2>;
+			bias-pull-up;
+		};
+	};
+};
