redhat_defconfig: Make SPMI PMIC builtin
The prior error is alleviated by removing usb0/usb1 from the devicetree.

But then, with Bjorn's newest patchset here, the dwc3 controller's gpio
dependencies are not met so it doesn't probe.

With the proper SPMI PMIC dependencies builtin, we're back to getting a
ramdump.

Signed-off-by: Andrew Halaney <ahalaney@redhat.com>

--- a/arch/arm64/configs/redhat_defconfig
+++ b/arch/arm64/configs/redhat_defconfig
@@ -1152,7 +1152,7 @@ CONFIG_SPI_QUP=y
 CONFIG_SPI_QCOM_GENI=m
 CONFIG_SPI_XLP=m
 CONFIG_SPI_AMD=y
-CONFIG_SPMI=m
+CONFIG_SPMI=y
 CONFIG_PPS_CLIENT_LDISC=m
 CONFIG_PPS_CLIENT_GPIO=m
 CONFIG_PTP_1588_CLOCK=y
@@ -1162,7 +1162,7 @@ CONFIG_PTP_1588_CLOCK_KVM=m
 CONFIG_PINCTRL_MAX77620=m
 # CONFIG_PINCTRL_NS2_MUX is not set
 CONFIG_PINCTRL_MSM=y
-CONFIG_PINCTRL_QCOM_SPMI_PMIC=m
+CONFIG_PINCTRL_QCOM_SPMI_PMIC=y
 CONFIG_PINCTRL_SC8280XP=y
 # CONFIG_GPIO_BCM_XGS_IPROC is not set
 CONFIG_GPIO_DWAPB=m
@@ -1239,7 +1239,7 @@ CONFIG_BCM2835_WDT=m
 CONFIG_BCMA_DRIVER_GMAC_CMN=y
 CONFIG_BCMA_DRIVER_GPIO=y
 CONFIG_MFD_MAX77620=y
-CONFIG_MFD_SPMI_PMIC=m
+CONFIG_MFD_SPMI_PMIC=y
 # CONFIG_MFD_VEXPRESS_SYSREG is not set
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=m
