arm64: dts: qcom: sa8295p-adp: Disable USB0/USB1
As soon as I apply patch:
1185ad7ba239 ("phy: qcom-snps: Add sc8280xp support")

The board starts to ramdump. Without these two USB controllers and their
associated phys things are ok, so continue without them since they're
not actively used in our lab.

Signed-off-by: Andrew Halaney <ahalaney@redhat.com>

--- a/arch/arm64/boot/dts/qcom/sa8295p-adp.dts
+++ b/arch/arm64/boot/dts/qcom/sa8295p-adp.dts
@@ -294,7 +294,7 @@
 };
 
 &usb_0 {
-	status = "okay";
+	status = "disabled";
 };
 
 &usb_0_dwc3 {
@@ -303,7 +303,7 @@
 };
 
 &usb_0_hsphy {
-	status = "okay";
+	status = "disabled";
 
 	vdda-pll-supply = <&vreg_l5a>;
 	vdda18-supply = <&vreg_l7a>;
@@ -311,14 +311,14 @@
 };
 
 &usb_0_qmpphy {
-	status = "okay";
+	status = "disabled";
 
 	vdda-phy-supply = <&vreg_l3a>;
 	vdda-pll-supply = <&vreg_l5a>;
 };
 
 &usb_1 {
-	status = "okay";
+	status = "disabled";
 };
 
 &usb_1_dwc3 {
@@ -327,7 +327,7 @@
 };
 
 &usb_1_hsphy {
-	status = "okay";
+	status = "disabled";
 
 	vdda-pll-supply = <&vreg_l1c>;
 	vdda18-supply = <&vreg_l7c>;
@@ -335,7 +335,7 @@
 };
 
 &usb_1_qmpphy {
-	status = "okay";
+	status = "disabled";
 
 	vdda-phy-supply = <&vreg_l4c>;
 	vdda-pll-supply = <&vreg_l1c>;
